# course-rag-assistant

./: README.md  pyproject.toml
src/rag_assistant/: chunking.py  main.py
